@@ -16,6 +16,18 @@
 import bpy
 from bsmax.keymaps import KeyMaps
 
+class Blender_State():
+	def __init__(self):
+		self.select_mouse = self.get_select_mouse()
+	
+	def get_select_mouse(self):
+		keyconfig = bpy.context.window_manager.keyconfigs.active
+		return getattr(keyconfig.preferences, "select_mouse", "LEFT")
+
+blender_state = Blender_State()
+
+
+
 def window(km):
 	pass
 
@@ -35,7 +47,8 @@ def view3d(km):
 
 def view3d_navigation(km,preferences):
 	space = km.space('3D View','VIEW_3D','WINDOW')
-	km.new(space,"view3d.drop_tool","RIGHTMOUSE","PRESS",[])
+	if blender_state.select_mouse == 'LEFT':
+		km.new(space,"view3d.drop_tool","RIGHTMOUSE","PRESS",[])
 	if preferences.view_undo:
 		km.new(space,"view3d.movecover","MIDDLEMOUSE","PRESS",[],shift=True)
 		km.new(space,"view3d.rotatecover","MIDDLEMOUSE","PRESS",[])
@@ -76,38 +89,45 @@ def transform(km):
 
 def object_mode(km):
 	space = km.space('Object Non-modal','EMPTY','WINDOW')
-	km.new(space,"view3d.drop_tool","RIGHTMOUSE","PRESS",[])
+	if blender_state.select_mouse == 'LEFT':
+		km.new(space,"view3d.drop_tool","RIGHTMOUSE","PRESS",[])
 	km.new(space,"bsmax.mode_set",'F9',"PRESS",[])
 	km.new(space,'wm.call_menu','A','PRESS',[('name','BSMAX_MT_createmenu')],ctrl=True,shift=True)
 	km.new(space,'object.join_plus','J','PRESS',[],ctrl=True)
 
 def mesh(km):
 	space = km.space('Mesh','EMPTY','WINDOW')
-	km.new(space,"view3d.drop_tool","RIGHTMOUSE","PRESS",[])
+	if blender_state.select_mouse == 'LEFT':
+		km.new(space,"view3d.drop_tool","RIGHTMOUSE","PRESS",[])
 
 def curve(km):
 	space = km.space('Curve','EMPTY','WINDOW')
-	km.new(space,"view3d.drop_tool","RIGHTMOUSE","PRESS",[])
+	if blender_state.select_mouse == 'LEFT':
+		km.new(space,"view3d.drop_tool","RIGHTMOUSE","PRESS",[])
 
 def armature(km):
 	space = km.space('Armature','EMPTY','WINDOW')
-	km.new(space,"view3d.drop_tool","RIGHTMOUSE","PRESS",[])
+	if blender_state.select_mouse == 'LEFT':
+		km.new(space,"view3d.drop_tool","RIGHTMOUSE","PRESS",[])
 	km.new(space,"wm.multi_item_rename","F2","PRESS",[])
 
 def metaball(km):
 	space = km.space('Metaball','EMPTY','WINDOW')
-	km.new(space,"view3d.drop_tool","RIGHTMOUSE","PRESS",[])
+	if blender_state.select_mouse == 'LEFT':
+		km.new(space,"view3d.drop_tool","RIGHTMOUSE","PRESS",[])
 
 def lattice(km):
 	space = km.space('Lattice','EMPTY','WINDOW')
-	km.new(space,"view3d.drop_tool","RIGHTMOUSE","PRESS",[])
+	if blender_state.select_mouse == 'LEFT':
+		km.new(space,"view3d.drop_tool","RIGHTMOUSE","PRESS",[])
 
 def grease_pencil(km):
 	pass
 
 def pos(km):
 	space = km.space('Pose','EMPTY','WINDOW')
-	km.new(space,"view3d.drop_tool","RIGHTMOUSE","PRESS",[])
+	if blender_state.select_mouse == 'LEFT':
+		km.new(space,"view3d.drop_tool","RIGHTMOUSE","PRESS",[])
 	km.new(space,'pose.select_hierarchy_plus','LEFT_BRACKET','PRESS',[('direction','PARENT'),('extend',False)])
 	km.new(space,'pose.select_hierarchy_plus','LEFT_BRACKET','PRESS',[('direction','PARENT'),('extend',True)],shift=True)
 	km.new(space,'pose.select_hierarchy_plus','RIGHT_BRACKET','PRESS',[('direction','CHILDREN'),('full',False),('extend',False)])
@@ -179,11 +199,12 @@ km_file_browser = KeyMaps()
 km_float_menu = KeyMaps()
 
 def register_blender(preferences):
-	if bpy.context.window_manager.keyconfigs.addon:
+	ctx = bpy.context
+	if ctx.window_manager.keyconfigs.addon:
 		if preferences.navigation_3d == "Blender":
 			view3d_navigation(km_navigation_3d,preferences)
 			km_navigation_3d.register()
-			bpy.context.preferences.inputs.view_zoom_axis = 'VERTICAL'
+			ctx.preferences.inputs.view_zoom_axis = 'VERTICAL'
 		else:
 			km_navigation_3d.unregister()
 
